FPVTL - 2392 - Added new mapping file and services