@@ -54,10 +54,9 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyMap;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -79,37 +78,49 @@ import static uk.gov.hmcts.reform.prl.utils.ElementUtils.element;
 
 @Slf4j
 @ExtendWith(MockitoExtension.class)
-class UpdatePartyDetailsServiceTest {
+public class UpdatePartyDetailsServiceTest {
 
-    private static final String BEARER_TOKEN = "Bearer token";
-
-    @InjectMocks
-    UpdatePartyDetailsService updatePartyDetailsService;
+    public static final String BEARER_TOKEN = "Bearer token";
     @Mock
     NoticeOfChangePartiesService noticeOfChangePartiesService;
+
     @Mock
     ObjectMapper objectMapper;
+
     @Mock
     ConfidentialDetailsMapper confidentialDetailsMapper;
+
     @Mock
     C100RespondentSolicitorService c100RespondentSolicitorService;
+
     @Mock
     DocumentLanguageService documentLanguageService;
+
     @Mock
     DocumentGenService documentGenService;
+
     @Mock
     PartyLevelCaseFlagsService partyLevelCaseFlagsService;
+
     @Mock
     @Qualifier("caseSummaryTab")
     CaseSummaryTabService caseSummaryTabService;
+
     @Mock
     ConfidentialityTabService confidentialityTabService;
+
     @Mock
     ConfidentialityC8RefugeService confidentialityC8RefugeService;
+
+    @InjectMocks
+    UpdatePartyDetailsService updatePartyDetailsService;
+
     @Mock
     ManageOrderService manageOrderService;
+
     @Mock
     C8ArchiveService c8ArchiveService;
+
     @Mock
     CaseNameService caseNameService;
 
@@ -817,6 +828,8 @@ class UpdatePartyDetailsServiceTest {
                              .build())
             .build();
 
+        Map<String, Object> nocMap = Map.of("some", "stuff");
+
         when(confidentialDetailsMapper.mapConfidentialData(
             Mockito.any(CaseData.class),
             Mockito.anyBoolean()
@@ -874,9 +887,12 @@ class UpdatePartyDetailsServiceTest {
                              .build())
             .build();
 
+        Map<String, Object> nocMap = Map.of("some", "stuff");
+
         updatePartyDetailsService.updateApplicantRespondentAndChildData(callbackRequest, BEARER_TOKEN);
         assertEquals("test1 test22", caseDataUpdated.get("applicantName"));
         assertEquals("test1 test22", caseDataUpdated.get("respondentName"));
+
     }
 
     @Test
@@ -954,6 +970,7 @@ class UpdatePartyDetailsServiceTest {
                              .build())
             .build();
 
+        Map<String, Object> nocMap = Map.of("some", "stuff");
         when(confidentialDetailsMapper.mapConfidentialData(
             Mockito.any(CaseData.class),
             Mockito.anyBoolean()
@@ -980,6 +997,7 @@ class UpdatePartyDetailsServiceTest {
         assertEquals("appl party", applicantsFL401.getPartyLevelFlag().getPartyName());
         assertEquals("resp party", respondentsFL401.getPartyLevelFlag().getPartyName());
     }
+
 
     @Test
     void testCaseFlagApplicantsC100() {
@@ -1089,8 +1107,10 @@ class UpdatePartyDetailsServiceTest {
         assertNotNull(caseDataUpdated.get("applicants"));
     }
 
+
     @Test
     void testCaseFlagRespondentsC100() {
+
         Map<String, Object> caseDataUpdated = new HashMap<>();
         caseDataUpdated.put("applicantName", "test1 test22");
         caseDataUpdated.put("respondentName", "respondent2 lastname222");
@@ -1133,6 +1153,7 @@ class UpdatePartyDetailsServiceTest {
         Element<Child> wrappedChildren = Element.<Child>builder().value(child).build();
         List<Element<Child>> listOfChildren = Collections.singletonList(wrappedChildren);
 
+
         CaseData caseData = CaseData.builder()
             .caseTypeOfApplication(PrlAppsConstants.C100_CASE_TYPE)
             .respondents(respondentList)
@@ -1166,13 +1187,14 @@ class UpdatePartyDetailsServiceTest {
                              .build())
             .caseDetailsBefore(CaseDetails.builder().id(123L).data(stringObjectMap).build())
             .build();
-        Map<String, Object> updatedCaseData = updatePartyDetailsService.updateApplicantRespondentAndChildData(
-            callbackRequest, BEARER_TOKEN);
-        assertNotNull(updatedCaseData.get("respondents"));
+        DocumentLanguage documentLanguage = DocumentLanguage.builder().isGenEng(true).isGenWelsh(true).build();
+        updatePartyDetailsService.updateApplicantRespondentAndChildData(callbackRequest, BEARER_TOKEN);
+        assertNotNull("respondents");
     }
 
     @Test
-    void testC8GenerateForRespondentsC100() {
+    void testC8GenerateForRespondentsC100() throws Exception {
+
         Map<String, Object> caseDataUpdated = new HashMap<>();
         caseDataUpdated.put("applicantName", "test1 test22");
         caseDataUpdated.put("respondentName", "respondent2 lastname222");
@@ -1247,13 +1269,13 @@ class UpdatePartyDetailsServiceTest {
                              .data(stringObjectMap)
                              .build())
             .build();
-        Map<String, Object> updatedCaseData = updatePartyDetailsService.updateApplicantRespondentAndChildData(
-            callbackRequest, BEARER_TOKEN);
-        assertNotNull(updatedCaseData.get("respondents"));
+        updatePartyDetailsService.updateApplicantRespondentAndChildData(callbackRequest, BEARER_TOKEN);
+        assertNotNull("respondents");
     }
 
     @Test
     void testC8GenerateForSixRespondentsC100() throws Exception {
+
         Map<String, Object> caseDataUpdated = new HashMap<>();
         caseDataUpdated.put("applicantName", "test1 test22");
         caseDataUpdated.put("respondentName", "respondent2 lastname222");
@@ -1447,10 +1469,10 @@ class UpdatePartyDetailsServiceTest {
             .build();
         DocumentLanguage documentLanguage = DocumentLanguage.builder().isGenEng(true).isGenWelsh(true).build();
         when(documentLanguageService.docGenerateLang(Mockito.any(CaseData.class))).thenReturn(documentLanguage);
-        Map<String, Object> updatedCaseData = updatePartyDetailsService.updateApplicantRespondentAndChildData(
-            callbackRequest, BEARER_TOKEN);
-        assertNotNull(updatedCaseData.get("respondents"));
+        updatePartyDetailsService.updateApplicantRespondentAndChildData(callbackRequest, BEARER_TOKEN);
+        assertNotNull("respondents");
     }
+
 
     @Test
     void testCheckIfConfidentialityDetailsChangedRespondentWhenRespondentsDoNotExist() {
@@ -1474,7 +1496,7 @@ class UpdatePartyDetailsServiceTest {
         );
 
         // then
-        assertFalse(bool);
+        assertEquals(false, bool);
     }
 
     @Test
@@ -1490,6 +1512,15 @@ class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("FL401")
             .respondentsFL401(respondentBefore)
             .build();
+        Map<String, Object> objectMap = new HashMap<>();
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetailsBefore(CaseDetails
+                                   .builder()
+                                   .state(State.CASE_ISSUED.getValue())
+                                   .data(objectMap)
+                                   .build())
+            .build();
+        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         PartyDetails respondent = PartyDetails.builder()
             .email("test1")
             .address(Address.builder()
@@ -1502,7 +1533,7 @@ class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertTrue(bool);
+        assertEquals(true, bool);
     }
 
     @Test
@@ -1514,6 +1545,15 @@ class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("FL401")
             .respondentsFL401(respondentBefore)
             .build();
+        Map<String, Object> objectMap = new HashMap<>();
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetailsBefore(CaseDetails
+                                   .builder()
+                                   .state(State.CASE_ISSUED.getValue())
+                                   .data(objectMap)
+                                   .build())
+            .build();
+        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         PartyDetails respondent = PartyDetails.builder()
             .email("test1")
             .build();
@@ -1522,7 +1562,7 @@ class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertTrue(bool);
+        assertEquals(true, bool);
     }
 
     @Test
@@ -1536,6 +1576,15 @@ class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("FL401")
             .respondentsFL401(respondentBefore)
             .build();
+        Map<String, Object> objectMap = new HashMap<>();
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetailsBefore(CaseDetails
+                                   .builder()
+                                   .state(State.CASE_ISSUED.getValue())
+                                   .data(objectMap)
+                                   .build())
+            .build();
+        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         PartyDetails respondent = PartyDetails.builder()
             .address(Address.builder()
                          .addressLine1("test1")
@@ -1546,7 +1595,7 @@ class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertTrue(bool);
+        assertEquals(true, bool);
     }
 
     @Test
@@ -1558,6 +1607,15 @@ class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("FL401")
             .respondentsFL401(respondentBefore)
             .build();
+        Map<String, Object> objectMap = new HashMap<>();
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetailsBefore(CaseDetails
+                                   .builder()
+                                   .state(State.CASE_ISSUED.getValue())
+                                   .data(objectMap)
+                                   .build())
+            .build();
+        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         PartyDetails respondent = PartyDetails.builder()
             .phoneNumber("012345")
             .build();
@@ -1566,7 +1624,7 @@ class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertTrue(bool);
+        assertEquals(true, bool);
     }
 
     @Test
@@ -1577,6 +1635,15 @@ class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("FL401")
             .respondentsFL401(respondentBefore)
             .build();
+        Map<String, Object> objectMap = new HashMap<>();
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetailsBefore(CaseDetails
+                                   .builder()
+                                   .state(State.CASE_ISSUED.getValue())
+                                   .data(objectMap)
+                                   .build())
+            .build();
+        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         PartyDetails respondent = PartyDetails.builder()
             .build();
         Element<PartyDetails> wrappedRespondent = Element.<PartyDetails>builder().value(respondent).build();
@@ -1584,7 +1651,7 @@ class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertFalse(bool);
+        assertEquals(false, bool);
     }
 
     @Test
@@ -1604,6 +1671,15 @@ class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("C100")
             .respondents(listOfRespondents)
             .build();
+        Map<String, Object> objectMap = new HashMap<>();
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetailsBefore(CaseDetails
+                                   .builder()
+                                   .state(State.CASE_ISSUED.getValue())
+                                   .data(objectMap)
+                                   .build())
+            .build();
+        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         respondentBefore = respondentBefore.toBuilder()
             .email("test1")
             .address(Address.builder()
@@ -1616,7 +1692,7 @@ class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertTrue(bool);
+        assertEquals(true, bool);
     }
 
     @Test
@@ -1632,6 +1708,15 @@ class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("C100")
             .respondents(listOfRespondents)
             .build();
+        Map<String, Object> objectMap = new HashMap<>();
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetailsBefore(CaseDetails
+                                   .builder()
+                                   .state(State.CASE_ISSUED.getValue())
+                                   .data(objectMap)
+                                   .build())
+            .build();
+        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         respondentBefore = respondentBefore.toBuilder()
             .email("test1")
             .build();
@@ -1640,7 +1725,7 @@ class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertTrue(bool);
+        assertEquals(true, bool);
     }
 
     @Test
@@ -1658,6 +1743,15 @@ class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("C100")
             .respondents(listOfRespondents)
             .build();
+        Map<String, Object> objectMap = new HashMap<>();
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetailsBefore(CaseDetails
+                                   .builder()
+                                   .state(State.CASE_ISSUED.getValue())
+                                   .data(objectMap)
+                                   .build())
+            .build();
+        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         respondentBefore = respondentBefore.toBuilder()
             .address(Address.builder()
                          .addressLine1("test1")
@@ -1668,7 +1762,7 @@ class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertTrue(bool);
+        assertEquals(true, bool);
     }
 
     @Test
@@ -1684,6 +1778,15 @@ class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("C100")
             .respondents(listOfRespondents)
             .build();
+        Map<String, Object> objectMap = new HashMap<>();
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetailsBefore(CaseDetails
+                                   .builder()
+                                   .state(State.CASE_ISSUED.getValue())
+                                   .data(objectMap)
+                                   .build())
+            .build();
+        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         respondentBefore = respondentBefore.toBuilder()
             .phoneNumber("012345")
             .build();
@@ -1692,7 +1795,7 @@ class UpdatePartyDetailsServiceTest {
             caseDataBefore,
             wrappedRespondent
         );
-        assertTrue(bool);
+        assertEquals(true, bool);
     }
 
     @Test
@@ -1708,11 +1811,20 @@ class UpdatePartyDetailsServiceTest {
             .caseTypeOfApplication("C100")
             .respondents(listOfRespondents)
             .build();
+        Map<String, Object> objectMap = new HashMap<>();
+        CallbackRequest callbackRequest = CallbackRequest.builder()
+            .caseDetailsBefore(CaseDetails
+                                   .builder()
+                                   .state(State.CASE_ISSUED.getValue())
+                                   .data(objectMap)
+                                   .build())
+            .build();
+        Map<String, Object> stringObjectMap = callbackRequest.getCaseDetailsBefore().getData();
         boolean bool = updatePartyDetailsService.checkIfConfidentialityDetailsChangedRespondent(
             caseDataBefore,
             wrappedRespondentBefore
         );
-        assertFalse(bool);
+        assertEquals(false, bool);
     }
 
     @Test
@@ -1740,8 +1852,10 @@ class UpdatePartyDetailsServiceTest {
         assertNotNull(updatedCaseData);
     }
 
+
     @Test
     void testAmendOtherPeopleInTheCase() {
+        CaseData caseData = CaseData.builder().build();
         Map<String, Object> objectMap = new HashMap<>();
         objectMap.put("caseTypeOfApplication", "C100");
         CallbackRequest callbackRequest = CallbackRequest.builder().caseDetails(CaseDetails.builder()
@@ -1813,6 +1927,8 @@ class UpdatePartyDetailsServiceTest {
 
     @Test
     void testSetApplicantDefaultApplicant() {
+
+
         PartyDetails respondent1 = PartyDetails.builder()
             .firstName("respondent1")
             .lastName("lastname1")
@@ -1842,6 +1958,7 @@ class UpdatePartyDetailsServiceTest {
         Map<String, Object> updatedCaseData = updatePartyDetailsService.setDefaultEmptyApplicantForC100(caseData);
         assertNotNull(updatedCaseData.get("applicants"));
     }
+
 
     @Test
     void testSetApplicantDefaultApplicant_scenario2() {
@@ -1877,6 +1994,8 @@ class UpdatePartyDetailsServiceTest {
 
     @Test
     void testSetRespondentsDefaultApplicant() {
+
+
         PartyDetails respondent1 = PartyDetails.builder()
             .firstName("respondent1")
             .lastName("lastname1")
@@ -1987,7 +2106,7 @@ class UpdatePartyDetailsServiceTest {
         Map<String, Object> updatedCaseData = updatePartyDetailsService.setDefaultEmptyChildDetails(caseData);
         List<Element<Child>> updatedChildDetails = (List<Element<Child>>) updatedCaseData.get("children");
         assertEquals(1, updatedChildDetails.size());
-        assertEquals(Child.builder().build(), updatedChildDetails.getFirst().getValue());
+        assertEquals(Child.builder().build(), updatedChildDetails.get(0).getValue());
     }
 
     @Test
@@ -2074,6 +2193,7 @@ class UpdatePartyDetailsServiceTest {
             "newChildDetails");
         assertEquals(1, updatedChildDetails.size());
     }
+
 
     @Test
     void testUpdateOtherPeopleInTheCaseConfidentialityData() {
@@ -2162,6 +2282,7 @@ class UpdatePartyDetailsServiceTest {
         Map<String, Object> updatedCaseData = updatePartyDetailsService.updateOtherPeopleInTheCaseConfidentialityData(
             callbackRequest);
         assertNotNull(updatedCaseData);
+
     }
 
     @Test
@@ -2386,6 +2507,7 @@ class UpdatePartyDetailsServiceTest {
             .respondents(List.of(respondent))
             .build();
 
+
         Map<String,Object> caseDataMapBefore = new HashMap<>();
         Map<String,Object> caseDataMap = new HashMap<>();
         caseDataMapBefore.put("before", true);
@@ -2416,6 +2538,7 @@ class UpdatePartyDetailsServiceTest {
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
         assertTrue(validationErrorList.isEmpty());
+
     }
 
     @Test
@@ -2437,6 +2560,7 @@ class UpdatePartyDetailsServiceTest {
             .respondents(List.of(respondent))
             .build();
 
+
         Map<String,Object> caseDataMapBefore = new HashMap<>();
         Map<String,Object> caseDataMap = new HashMap<>();
         caseDataMapBefore.put("before", true);
@@ -2467,6 +2591,7 @@ class UpdatePartyDetailsServiceTest {
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
         assertTrue(validationErrorList.isEmpty());
+
     }
 
     @Test
@@ -2518,7 +2643,9 @@ class UpdatePartyDetailsServiceTest {
 
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
+        assertTrue(!validationErrorList.isEmpty());
         assertTrue(validationErrorList.getFirst().contains("Barrister is associated with the party"));
+
     }
 
     @Test
@@ -2610,7 +2737,9 @@ class UpdatePartyDetailsServiceTest {
 
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
+        assertTrue(!validationErrorList.isEmpty());
         assertTrue(validationErrorList.getFirst().contains("Barrister is associated with the party"));
+
     }
 
     @Test
@@ -2660,9 +2789,12 @@ class UpdatePartyDetailsServiceTest {
                 return null;
             });
 
+
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
+        assertTrue(!validationErrorList.isEmpty());
         assertTrue(validationErrorList.getFirst().contains("Barrister is associated with the party"));
+
     }
 
     @Test
@@ -2694,6 +2826,7 @@ class UpdatePartyDetailsServiceTest {
         List<String> validationErrorList = updatePartyDetailsService.validateUpdatePartyDetails(callbackRequest);
 
         assertTrue(validationErrorList.isEmpty());
+
     }
 
     private Element<PartyDetails> getPartyDetails(String partyName, boolean hasBarrister) {
@@ -2709,4 +2842,5 @@ class UpdatePartyDetailsServiceTest {
                        .firstName(partyName).build())
             .build();
     }
+
 }
